features/layout/page-container/page-container.module.scss
@use "@styles/color";
@use "@styles/font";
@use "@styles/space";
@use "@styles/breakpoint";
@use "@styles/misc";

// .container {
//   display: flex;
//   min-height: 100vh; // Full height of the viewport
// }

// .sidebar {
//   width: 250px; // Fixed width for the sidebar
//   background: color.$gray-900;
//   position: relative;
//   z-index: 2; // Ensure sidebar stays above other content

//   &.isCollapsed {
//     width: 83px;
//   }
// }

// .contentWrapper {
//   flex: 1;
//   display: flex;
//   flex-direction: column;
//   position: relative;
//   margin-left: 50px; // Matches the sidebar width when expanded

//   &.isCollapsed {
//     margin-left: 83px; // Matches the collapsed sidebar width
//   }
// }

// .main {
//   flex: 1; // Main content takes up remaining space
// }

// .contentContainer {
//   flex: 1;
//   margin-top: misc.$header-height;
//   padding: space.$s8 space.$s3;
//   background: white;
//   overflow: hidden; // Ensure no content overflows

//   @media (min-width: breakpoint.$desktop) {
//     margin-top: 0; // Remove top margin for desktop
//     padding: space.$s8;
//     border-top-left-radius: space.$s10;
//   }
// }

.container {
  display: flex;
  min-height: 100vh; // Full height of the viewport
}

.sidebar {
  width: 250px; // Expanded width
  background: color.$gray-900;
  position: relative;
  z-index: 2;

  &.isCollapsed {
    width: 83px; // Collapsed width (match with sidebar-navigation.module.scss)
  }
}

.contentWrapper {
  flex: 1;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-left: 30px; // Matches expanded sidebar width

  &.isCollapsed {
    margin-left: 0; // Matches collapsed sidebar width
  }
}

.main {
  flex: 1;
}

.contentContainer {
  flex: 1;
  margin-top: misc.$header-height;
  padding: space.$s8 space.$s3;
  background: white;
  overflow: hidden;

  @media (min-width: breakpoint.$desktop) {
    margin-top: 0;
    padding: space.$s8;
    border-top-left-radius: space.$s10;
  }

  @media (width <= 1023px) {
    margin-left: -30px; // Reset any left margin
    padding-left: 10px; // Add a small padding to the left side
    padding-right: 10px; // Maintain balance with right padding
  }
}

.footer {
  margin-left: 250px; // Expanded state

  &.isCollapsed {
    margin-left: 83px; // Collapsed state
  }
}

